.kube/epart-components-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: epart-components-prod
  namespace: ifok-digital
  labels:
    workload.user.cattle.io/workloadselector: apps.deployment-ifok-digital-epart-components-prod
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: apps.deployment-ifok-digital-epart-components-prod
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        workload.user.cattle.io/workloadselector: apps.deployment-ifok-digital-epart-components-prod
    spec:
      affinity: {}
      containers:
        - name: container-0
          image: registry.bonnconsulting.group/ifok-epart-components-prod:latest
          imagePullPolicy: Always
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          ports:
            - containerPort: 80
              name: nginx
              protocol: TCP
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: registry-prod
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: epart-components-prod
  namespace: ifok-digital
spec:
  ports:
    - name: nginx
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    workload.user.cattle.io/workloadselector: apps.deployment-ifok-digital-epart-components-prod
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/client-max-body-size: 150M
    nginx.ingress.kubernetes.io/proxy-body-size: 512m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 256k
    nginx.ingress.kubernetes.io/proxy-buffers: 4 512k
  name: ingress-ifok-epart-components-prod
  namespace: ifok-digital
spec:
  rules:
    - host: epart-components.ifok.digital
      http:
        paths:
          - backend:
              service:
                name: epart-components-prod
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - epart-components.ifok.digital
      secretName: certificate-ifok-epart-components-prod
---
